<resources>
    <string name="app_name">CMMSandroidApp</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customerName_underlined"><u>Customer Name</u></string>
    <string name="customer_name">Customer Name</string>
    <string name="email">Email</string>
    <string name="customer">Customer</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="phone_number">6986012899</string>
    <string name="address">Location</string>
    <string name="contact_information">Contact Information</string>
    <string name="addressValue">Sperheioy 16</string>
    <string name="emailValue">giorgoskouvarakis@gmail.com</string>
    <string name="helper_text">helping</string>
    <string name="SerialNumber">Serial Number</string>
    <string name="title">Title</string>
    <string name="notes">Notes</string>
    <string name="type">Type</string>
    <string name="date_end">Date End</string>
    <string name="date_string">27/12/23</string>
    <string name="description_string">Ola pigan kala, i ektiposi est</string>
    <string name="add">Add</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="model">Model</string>
    <string name="checkForm">checkFormDonwtonight</string>
    <string name="check_form">Check Form</string>
    <string-array name="status_cases">
        <item>Red</item>
        <item>Yellow</item>
        <item>Blue</item>
        <item>White</item>

    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="app_date_format">dd/MM/yy HH:mm:ss</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
</resources>