<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_urgent_name"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/title"
            android:layout_marginBottom="5dp"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/contraint_test"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_urgent_name">

            <View
                android:id="@+id/view_testing"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:background="@color/midnightBlue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 />

            <TextView
                android:id="@+id/tv_title_home"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/title"
                android:textSize="20sp"

                app:layout_constraintEnd_toStartOf="@+id/img_button_home"
                app:layout_constraintStart_toEndOf="@+id/view_testing"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/img_button_home"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/more_vertical_icon"
                android:background="@color/white"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/type" />

            <TextView
                android:id="@+id/tv_details_home"
                android:layout_width="0dp"
                android:layout_height="60dp"

                android:layout_marginStart="4dp"
                android:padding="4dp"
                android:textSize="16sp"
                android:lines="3"
                android:minLines="2"
                android:maxLines="3"
                android:text="@string/description_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view_testing"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_home"
                app:layout_constraintVertical_bias="0.483" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contraint_test"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dates_home"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/date_string"
                app:drawableTint="#999C9C"
                app:drawableStartCompat="@drawable/timer_date" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:id="@+id/tv_customername_home"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/date_string"
                app:drawableTint="#999C9C"
                app:drawableStartCompat="@drawable/baseline_factory_24" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>